Fix z-indexes.

--- a/design/default/generate/documents/static/styles/_screen_layout.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout.scss
@@ -80,7 +80,7 @@ body {
         > footer {
             position: sticky;
             bottom: 0;
-            z-index: 1;
+            z-index: 10;
             grid-column-start: 1;
             grid-column-end: span 2;
             grid-row-start: 4;
