--- a/design/default/generate/documents/static/styles/_screen_layout_header.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_header.scss
@@ -146,7 +146,7 @@ body {
             grid-template-rows: 1fr auto 1fr;
             position: sticky;
             top: 0;
-            z-index: 1;
+            z-index: 10;
             height: 4rem;
             transition: height 0.1s;
 
@@ -217,7 +217,7 @@ body {
                             > menu.nav-toc.nav-toc-1 {
                                 visibility: visible;
                                 opacity: 1;
-                                z-index: 3;
+                                z-index: 11;
                                 top: 100%;
                                 width: 100%;
                                 background-color: config.$header__menu__background_color__hover;
